# vibrary

./: .gitignore  README.md  qdrant_android_windows_agent_plan_v2.md
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/schemas/com.vibrary.android.data.AppDatabase/: 1.json  2.json
android/app/src/main/: AndroidManifest.xml
backend/: README.md  pyproject.toml  requirements.txt
backend/packaging/: backend_entry.py
backend/src/vibrary_backend/: api.py  cache.py  config.py  database.py  embedding.py  hashing.py  image_semantics.py  indexing.py  library.py  main.py  pairing.py  pipeline.py  qdrant_adapter.py  resolver.py  search.py  uploads.py  vector_store.py
backend/tests/: test_api_security.py  test_backend_core.py  test_cache_and_filters.py  test_config_and_pairing.py  test_desktop_renderer_cors_config.py  test_index_maintenance_api.py  test_jina_runtime_packaging.py  test_packaging_entry.py  test_pipeline_config.py  test_qdrant_contract.py  test_upload_resume.py  test_windows_import_api_indexing.py
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/sidecars/: README.md
desktop/src/main/: dataPaths.ts  desktopSettings.ts  ipc.ts  lanDiscovery.ts  main.ts  ports.ts  serviceConfig.ts  sidecars.ts
desktop/src/main/__tests__/: dataPaths.test.ts  desktopSettings.test.ts  ports.test.ts  sidecars.test.ts
desktop/src/preload/: preload.ts
desktop/src/renderer/: App.tsx  backendClient.ts  backendData.ts  dashboardModel.ts  global.d.ts  main.tsx  styles.css  uiCopy.ts
desktop/src/renderer/__tests__/: backendClient.test.ts  backendData.test.ts  dashboardModel.test.ts  (+1 more)
docs/: USER_MANUAL_zh-CN.md
docs/superpowers/plans/: 2026-05-14-library-center-navigation.md  2026-05-18-material3-desktop-layout.md
docs/superpowers/specs/: 2026-05-14-library-center-navigation-design.md  2026-05-15-qdrant-pipeline-configuration-design.md
scripts/: build_release.ps1
(+44 files in other folders)
