[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibrary-backend"
version = "0.1.5"
description = "Local Vibrary backend for asset library, uploads, indexing, and source-aware retrieval."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.7,<3",
  "qdrant-client>=1.9,<2",
  "fastembed>=0.3,<1"
]

[project.scripts]
vibrary-backend = "vibrary_backend.main:main"

[tool.setuptools.packages.find]
where = ["src"]
